--- a/Career-Page-react/package.json
+++ b/Career-Page-react/package.json
@@ -16,7 +16,12 @@
     "@mui/material": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2"
+
+
+
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
